Get newlines consistent, prevent adding of xml declaration and training newline, fix IngestContentObjectJob failures